# messanger

./: CMakeLists.txt  conanfile.txt
client/: CMakeLists.txt  main.cpp
client/socket/: ClientSocketConnector.cpp  ClientSocketConnector.h
core/socket/: SocketConnector.cpp  SocketConnector.h
core/socket/dto/: Message.h
core/socket/utils/: SerializationUtils.h
server/: CMakeLists.txt  main.cpp
server/socket/: TCPServer.cpp  TCPServer.h
server/socket/handler/: ClientHandler.cpp  ClientHandler.h
